# Ligandra

./: .gitignore  CADD_Platform_Build_Promp.docx  Dockerfile  LICENSE  README.md  experiment.yaml  pyproject.toml  requirements.txt
.streamlit/: config.toml
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
examples/: chembl_experiment.yaml  local_experiment.yaml  mini_dataset.csv
ligandra/: __init__.py
ligandra/api/: __init__.py  cli.py  export.py
ligandra/config/: __init__.py  schema.py
ligandra/core/: __init__.py  molecule.py  registry.py  seeding.py  types.py
ligandra/curate/: __init__.py  curator.py  splits.py  standardize.py  units.py
ligandra/data/: __init__.py  base.py  bindingdb.py  cache.py  chembl.py  local.py
ligandra/dock/: __init__.py  base.py  vina.py
ligandra/featurize/: __init__.py  base.py  descriptors.py  fingerprints.py  graph.py  learned.py
ligandra/generate/: __init__.py  base.py  diffusion.py  genetic.py  language_model.py  transformer.py  vae.py
ligandra/models/: __init__.py  base.py  classical.py  foundation.py  gnn.py  metrics.py
ligandra/pipeline/: __init__.py  runner.py
ligandra/pretrained/: __init__.py  base.py  checkpoints.py  leakage.py  spec.py
ligandra/score/: __init__.py  base.py  scorers.py
ligandra/tracking/: __init__.py
ligandra/ui/: __init__.py  app.py  common.py  jobs.py
ligandra/ui/pages/: 1_Data_and_Curate.py  2_Train_and_Benchmark.py  3_Fine_tune.py  4_Generate_and_Rank.py  5_Export.py
paper/: paper.bib  paper.docx  paper.md
tests/: conftest.py  test_bindingdb.py  test_chembl_resolve.py  test_curation_math.py  test_data_cache.py  test_diffusion.py  test_dock_vina.py  test_featurizers_models.py  test_generators_dl.py  test_pipeline_integration.py  test_pretrained.py  test_registry.py  test_score_generate.py  test_ui_jobs.py
