[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ligandra"
version = "0.1.0"
description = "Target-agnostic, config-driven computer-aided drug-design (CADD) platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ligandra contributors" }]
keywords = ["cheminformatics", "drug-design", "qsar", "generative", "rdkit"]

# Core dependencies — everything the default (classical + graph_ga) path needs.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "rdkit>=2023.9",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy / GPU-capable extras, imported lazily so the core stays installable.
deep = ["torch>=2.1", "transformers>=4.38", "selfies>=2.1"]  # M5 foundation + LM/VAE/transformer generators
gnn = ["torch>=2.1"]                                # M4 D-MPNN / Chemprop path
boost = ["xgboost>=2.0", "lightgbm>=4.0"]           # gradient-boosted classical
descriptors = ["mordred>=1.2"]                      # Mordred featurizer
chembl = ["chembl_webresource_client>=0.10"]        # M1 ChEMBL source
dock = ["meeko>=0.5"]                               # M8 Vina ligand prep (+ external vina binary)
ui = ["streamlit>=1.30", "matplotlib>=3.7"]         # M9 Streamlit app
tracking = ["mlflow>=2.9"]                          # M10 MLflow backend
dev = ["pytest>=7.4", "ruff>=0.3", "mypy>=1.8"]
all = [
    "torch>=2.1", "transformers>=4.38", "xgboost>=2.0", "lightgbm>=4.0",
    "mordred>=1.2", "chembl_webresource_client>=0.10", "streamlit>=1.30",
    "matplotlib>=3.7", "mlflow>=2.9",
]

[project.scripts]
ligandra = "ligandra.api.cli:main"

[tool.setuptools.packages.find]
include = ["ligandra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP042: str+Enum is a deliberate Pydantic-v2-friendly pattern (not StrEnum).
# B905: explicit zip(strict=) is noise for our equal-length iterables.
ignore = ["E501", "UP042", "B905"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = true
